--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: font;
+  src: url("font.ttf");
+}
 .App {
   text-align: center;
 }
@@ -35,4 +39,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+.home {
+  padding-top: 30px;
+  color: red;
+  font-size: 35px;
+  font-family: font;
+}
+.intro-text {
+  /* font-family: font; */
+  
 }
