--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.navbar ul{
+  list-style-type: none;
+  color: gray;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+}
+.navbar li {
+  display: inline;
+}
+.navbar a {
+  color: gray;
+  text-decoration: none;
+}
+.navbar a:hover {
+  color: red;
+}
