--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
+  overflow-y: scroll;
+  /* background-color: #d6d6d8; */
 }
 
 code {
