--- a/src/App.css
+++ b/src/App.css
@@ -83,16 +83,19 @@ code {
 .home,
 .intro-text {
   margin: 0;
-  font-size: 35px;
+  font-size: 3vw;
   color: #826244;
+  justify-content: center;
 }
 .intro-text {
   color: rgb(71, 71, 71);
-  font-size: 25px;
+  font-size: 1.8vw;
+  justify-content: center;
 }
 .our_collection {
-  padding-left: 45%;
   font-size: 25px;
   color: gray;
   font-family: font;
+  justify-content: center;
+  text-align: center;
 }
