--- a/src/review-section.css
+++ b/src/review-section.css
@@ -1,10 +1,4 @@
-.review-section {
-    display: grid;
-    grid-template-columns: 100px 400px;
-    grid-template-rows: repeat(7, 1fr);
-    /* gap: 20px; */
-}
-.review-card {
-    padding: 20px;
-    margin: 20px;
+.profile {
+    position: relative;
+    left: 13%;
 }
